src/objects/Building_Goal__c.object
<CustomObject>
    <fields>
        <fullName>Building__c</fullName>
        <label>Building</label>
        <referenceTo>Building__c</referenceTo>
        <relationshipLabel>Building Goals</relationshipLabel>
        <relationshipName>Building_Goals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Target_Date__c</fullName>
        <label>Target Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Target_Desks_Booked__c</fullName>
        <label>Target Desks Booked</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_Occupancy__c</fullName>
        <label>Target Occupancy %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Building Goal</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Building__c</columns>
        <columns>Target_Date__c</columns>
        <columns>Target_Occupancy__c</columns>
        <columns>Target_Desks_Booked__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Target_Date__c</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BG-{0000}</displayFormat>
        <label>Building Goal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Building Goals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>